tests/ui/option_str.stderr
error: unsupported element type of Option
 --> tests/ui/option_str.rs:4:19
  |
4 |         fn f() -> Option<&'static str>;
  |                   ^^^^^^^^^^^^^^^^^^^^
